# dwave-greedy

./: README.rst  pyproject.toml  setup.cfg
.circleci/: config.yml
greedy/: __init__.py  composite.py  descent.py  sampler.py
tests/: test_composite.py
